AA activity close button alignment fixed

--- a/www/css/course.css
+++ b/www/css/course.css
@@ -311,7 +311,6 @@ box-shadow: -3px 3px 5px 3px rgba(0, 0, 0, .2);}
 .courses ul li {margin-left: 20px; padding-left:0}
 .single_book{display:none;}
 .acc_tilebx ul {width: 158px;margin: 0 auto;}
-.tpbreadcrumbs { margin-top:31px;}
 }
 
 
